--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="social">
 
       <a class="social-link" href="https://github.com/nicolegallo" target="_blank"><i class="fa-icon fa-brands fa-github fa-sm"></i>GitHub</a></li>
-      <br><a class="social-link" href="https://twitter.com/nickelcodes" target="_blank"><i class="fa-icon fa-brands fa-twitter fa-sm"></i>Twitter</a></li>
+      <br><a class="social-link" href="https://twitter.com/nickelscoin" target="_blank"><i class="fa-icon fa-brands fa-twitter fa-sm"></i>Twitter</a></li>
       <br><a class="social-link" href="https://www.linkedin.com/in/nicolegallo/" target="_blank"><i class="fa-icon fa-brands fa-linkedin fa-sm"></i>LinkedIn</a></li>
       <br><a class="social-link" href="mailto:nicole.gallo@outlook.com?subject=Hello!"><i class="fa-icon fa-solid fa-at fa-sm"></i>Email</a></li>
       <br><a class="social-link" href="ng-resume-2022.pdf" target="_blank"><i class="fa-icon fa-solid fa-file fa-sm"></i>Resume</a></li>
