--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li>I am a full-time SEO @ <a href="https://www.zazzle.com/" target="_blank">Zazzle</a> & a part-time <span class="lol-taught">self-taught</span> engineer.</li>
       <li>I live in <span class="location">San Jose, CA</span> Ann Arbor, MI.</li>
       <li>Occasionally, I take <a class="film" href="https://vsco.co/nickelfilm/gallery" target="_blank">film pictures</a> of my days.</li>
-      <li>Follow my journey at <a class="fun-ideas" href="https://nickelcodes.com/ideas/">The Daily Code</a>.</li>
+      <li>Follow what I'm doing on <a href="https://twitter.com/nickelscoin">Twitter</a>.</li>
     </ul>
 
     <h3>Favorite things</h3>
