--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h3>Favorite things</h3>
     <ul>
       <li>BYOR – Build Your Own Resume | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://www.nickelcodes.com/byor/" target="_blank">Deployed Site</a></li>
-      <li>Code With Madi – HTML & CSS Website | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://www.nickelcodes.com/nickelnotnickle/" target="_blank">Deployed Site</a></li>
+      <li>Code With Madi – HTML & CSS Website | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
       <li>Burton D. Morgan Business Plan Competition - Semi Finalist | <a href="https://1drv.ms/b/s!AmcpeOsTowz1jCxACHQCPyWZ4M-W" target="_blank">Exec Summary</a> | <a href="https://1drv.ms/b/s!AmcpeOsTowz1jgftM5iqFKiKOCOE" target="_blank">Business
           Plan</a></li>
       <li>Microsoft Hackathon - 1st Place | Ereo Application for Windows Phones | <a href="https://www.youtube.com/shorts/iQ_qpXKbZR0" target="_blank">Video Demo</a></li>
