--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <li>Follow what I'm doing on <a href="https://twitter.com/nickelscoin">Twitter</a>.</li>
     </ul>
 
-    <h3>Favorite things</h3>
+    <h3>Proud things</h3>
     <ul>
       <li>BYOR – Build Your Own Resume | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/byor/" target="_blank">Deployed Site</a></li>
       <li>Code With Madi – HTML & CSS Website | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
@@ -61,7 +61,7 @@
 
     <footer>
       <div class="credit">
-        <p>© Created by Nicole | 2022</p>
+        <p>© Created by Nicole | 2023</p>
 
       </div>
     </footer>
