add / remove in about me
remove twitter mention. add nickel mention

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <h3>Things about me</h3>
     <ul>
+      <li>You can call me <strong>Nickel</strong>.</li></li>
       <li>I am a full-time SEO @ <a href="https://www.zazzle.com/" target="_blank">Zazzle</a> & a part-time <span class="lol-taught">self-taught</span> engineer.</li>
       <li>I live in <span class="location">San Jose, CA</span> Ann Arbor, MI.</li>
       <li>Occasionally, I take <a class="film" href="https://vsco.co/nickelfilm/gallery" target="_blank">film pictures</a> of my days.</li>
-      <li>Follow what I'm doing on <a href="https://twitter.com/nickelscoin">Twitter</a>.</li>
     </ul>
 
     <h3>Proud things</h3>
