--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nicole Gallo - Inventor, Creator, Engineer</title>
+  <title>Nicole Gallo - Digital Producer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,17 +31,17 @@
 
     <h3>Things about me</h3>
     <ul>
+      
       <li>I am a full-time SEO @ <a href="https://www.zazzle.com/" target="_blank">Zazzle</a> & a part-time <span class="lol-taught">self-taught</span> engineer.</li>
       <li>I live in <span class="location">San Jose, CA</span> Ann Arbor, MI.</li>
       <li>Occasionally, I take <a class="film" href="https://vsco.co/nickelfilm/gallery" target="_blank">film pictures</a> of my days.</li>
-      <li>Co-founder of the <strong>two-hit wonder</strong> <em><a class="housechella" href="https://www.instagram.com/housechella/">HOUSECHELLA</a></em> @ Purdue.</li>
-      <li><a class="fun-ideas" href="https://nickelcodes.com/ideas/">The Daily Code</a></li>
+      <li>Follow what I'm doing on <a href="https://twitter.com/nickelscoin" target="_blank">Twitter</a> or <a href="https://www.instagram.com/nickelgallo/" target="_blank">Instagram</a>.</li>
     </ul>
 
-    <h3>Favorite things</h3>
+    <h3>Proud things</h3>
     <ul>
-      <li>BYOR – Build Your Own Resume | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://www.nickelcodes.com/byor/" target="_blank">Deployed Site</a></li>
-      <li>Code With Madi – HTML & CSS Website | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://www.nickelcodes.com/nickelnotnickle/" target="_blank">Deployed Site</a></li>
+      <li>BYOR – Build Your Own Resume | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/byor/" target="_blank">Deployed Site</a></li>
+      <li>Code With Madi – HTML & CSS Website | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
       <li>Burton D. Morgan Business Plan Competition - Semi Finalist | <a href="https://1drv.ms/b/s!AmcpeOsTowz1jCxACHQCPyWZ4M-W" target="_blank">Exec Summary</a> | <a href="https://1drv.ms/b/s!AmcpeOsTowz1jgftM5iqFKiKOCOE" target="_blank">Business
           Plan</a></li>
       <li>Microsoft Hackathon - 1st Place | Ereo Application for Windows Phones | <a href="https://www.youtube.com/shorts/iQ_qpXKbZR0" target="_blank">Video Demo</a></li>
@@ -51,40 +51,18 @@
     <div class="social">
 
       <a class="social-link" href="https://github.com/nicolegallo" target="_blank"><i class="fa-icon fa-brands fa-github fa-sm"></i>GitHub</a></li>
-      <br><a class="social-link" href="https://twitter.com/nickelcodes" target="_blank"><i class="fa-icon fa-brands fa-twitter fa-sm"></i>Twitter</a></li>
+      <br><a class="social-link" href="https://twitter.com/nickelscoin" target="_blank"><i class="fa-icon fa-brands fa-twitter fa-sm"></i>Twitter</a></li>
       <br><a class="social-link" href="https://www.linkedin.com/in/nicolegallo/" target="_blank"><i class="fa-icon fa-brands fa-linkedin fa-sm"></i>LinkedIn</a></li>
       <br><a class="social-link" href="mailto:nicole.gallo@outlook.com?subject=Hello!"><i class="fa-icon fa-solid fa-at fa-sm"></i>Email</a></li>
-      <br><a class="social-link" href="ng-resume-4_2023.pdf" target="_blank"><i class="fa-icon fa-solid fa-file fa-sm"></i>Resume</a></li>
+      <br><a class="social-link" href="ng-resume-04_2023.pdf" target="_blank"><i class="fa-icon fa-solid fa-file fa-sm"></i>Resume</a></li>
     </div>
 
     <hr>
-    <div class="ideas-days">
-      <!-- <h3>The Daily Code</h3> -->
-
-      <button type="button" class="collapsible">The Daily Code</button>
-      <div class="content">
-        <p>Day 1 - <a class="fun-ideas" href="https://www.nickelcodes.com/">This homepage</a></p>
-        <p>Day 2 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/random-color-generator/">Random Color Generator</a></p>
-        <p>Day 3 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/to-do-list/">To Do List</a></p>
-        <p>Day 4 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/number-guessing-game/">Number Guessing Game</a></p>
-        <p>Day 5 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/tindog/">TinDog</a></p>
-      </div>
-
-
-      <!-- <p>Day 6 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/#day-six"><em>No code - just blog</em></a></p>
-      <p>Day 7 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/#day-seven"><em>No code - just blog</em></a></p>
-      <p>Day 8 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/#day-eight"><em>Check Back Tomorrow!</em></a></p> -->
-      <!-- <p>Day 7 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/#day-seven"><em>Check Back Tomorrow!</em></a></p> -->
-      <!-- <p>Day 7 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/#day-seven"><em>Check Back Tomorrow!</em></a></p> -->
-      <!-- <p>Day 7 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/#day-seven"><em>Check Back Tomorrow!</em></a></p> -->
-      <!-- <p>Day 7 - <a class="fun-ideas" href="https://www.nickelcodes.com/ideas/#day-seven"><em>Check Back Tomorrow!</em></a></p> -->
-
-    </div>
 
 
     <footer>
       <div class="credit">
-        <p>© Created by Nicole | 2022</p>
+        <p>© Created by Nicole | 2023</p>
 
       </div>
     </footer>
