--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li>I am a full-time SEO @ <a href="https://www.zazzle.com/" target="_blank">Zazzle</a> & a part-time <span class="lol-taught">self-taught</span> engineer.</li>
       <li>I live in <span class="location">Ann Arbor, MI</span> San Jose, CA.</li>
       <li>Occasionally, I take <a class="film" href="https://vsco.co/nickelfilm/gallery" target="_blank">film pictures</a> of my days.</li>
-      <li>Currently <em>writing</em> & <strong>gaining</strong> @ <a href="https://biglittlegains.com/">Big Little Gains</a>.
+      <li>Currently <em>writing</em> & <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
       <li>Follow what I'm doing on <a href="https://twitter.com/nickelscoin" target="_blank">Twitter</a> or <a href="https://www.instagram.com/nickelgallo/" target="_blank">Instagram</a>.</li>
     </ul>
 
@@ -55,8 +55,8 @@
       <br><a class="social-link" href="https://twitter.com/nickelscoin" target="_blank"><i class="fa-icon fa-brands fa-twitter fa-sm"></i>Twitter</a></li>
       <br><a class="social-link" href="https://www.linkedin.com/in/nicolegallo/" target="_blank"><i class="fa-icon fa-brands fa-linkedin fa-sm"></i>LinkedIn</a></li>
       <br><a class="social-link" href="mailto:nicole.gallo@outlook.com?subject=Hello!"><i class="fa-icon fa-solid fa-at fa-sm"></i>Email</a></li>
-<br><a class="social-link" href="https://biglittlegains.com/"><i class="fa-solid fa-blog"></i>Blog</a></li> 
-<br><a class="social-link" href="ng-resume-4_2023.pdf" target="_blank"><i class="fa-icon fa-solid fa-file fa-sm"></i>Resume</a></li>
+      <br><a class="social-link" href="https://biglittlegains.com/"><i class="fa-icon fa-solid fa-at fa-sm fa-blog"></i>Blog</a></li> 
+      <br><a class="social-link" href="ng-resume-4_2023.pdf" target="_blank"><i class="fa-icon fa-solid fa-file fa-sm"></i>Resume</a></li>
     </div>
 
     <hr>
