'currently' to 'daily'

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li>I am a full-time SEO @ <a href="https://www.zazzle.com/" target="_blank">Zazzle</a> & a part-time <span class="lol-taught">self-taught</span> engineer.</li>
       <li>I live in <span class="location">Ann Arbor, MI</span> San Jose, CA.</li>
       <li>Occasionally, I take <a class="film" href="https://vsco.co/nickelfilm/gallery" target="_blank">film pictures</a> of my days.</li>
-      <li>Currently <em>writing</em> & <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
+      <li>Daily <em>writing</em> & <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
       <li>Follow what I'm doing on <a href="https://twitter.com/nickelscoin" target="_blank">Twitter</a> or <a href="https://www.instagram.com/nickelgallo/" target="_blank">Instagram</a>.</li>
     </ul>
 
