--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <br><a class="social-link" href="https://twitter.com/nickelscoin" target="_blank"><i class="fa-icon fa-brands fa-twitter fa-sm"></i>Twitter</a></li>
       <br><a class="social-link" href="https://www.linkedin.com/in/nicolegallo/" target="_blank"><i class="fa-icon fa-brands fa-linkedin fa-sm"></i>LinkedIn</a></li>
       <br><a class="social-link" href="mailto:nicole.gallo@outlook.com?subject=Hello!"><i class="fa-icon fa-solid fa-at fa-sm"></i>Email</a></li>
-      <br><a class="social-link" href="https://biglittlegains.com/"><i class="fa-icon fa-solid fa-at fa-sm fa-blog"></i>Blog</a></li> 
+      <br><a class="social-link" href="https://biglittlegains.com/" target="_blank"><i class="fa-icon fa-solid fa-at fa-sm fa-blog"></i>Blog</a></li> 
       <br><a class="social-link" href="ng-resume-4_2023.pdf" target="_blank"><i class="fa-icon fa-solid fa-file fa-sm"></i>Resume</a></li>
     </div>
 
