--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <h3>Proud things</h3>
     <ul>
-      <li>BYOR – Build Your Own Resume | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/byor/" target="_blank">Deployed Site</a></li>
-      <li>Code With Madi – HTML & CSS Website | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
+      <li>BYOR – Build Your Own Resume (HTML & CSS Project) | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/byor/" target="_blank">Deployed Site</a></li>
+      <li>Code With Madi (HTML & CSS Project) | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
       <li>Burton D. Morgan Business Plan Competition - Semi Finalist | <a href="https://drive.google.com/file/d/1828SgranArgS0OV3EIBh26XvllTiZLof/view?usp=sharing" target="_blank">Exec Summary</a> | <a href="https://drive.google.com/file/d/16rbjCN_j6jpYr5JfnNw-0ou7rVrat6Yn/view?usp=sharing" target="_blank">Business
           Plan</a></li>
       <li>Microsoft Hackathon - 1st Place | Ereo Application for Windows Phones | <a href="https://www.youtube.com/shorts/iQ_qpXKbZR0" target="_blank">Video Demo</a></li>
