--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nicole Gallo | 2023</title>
+  <title>Nicole Gallo | 2024</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,20 +27,21 @@
     </div>
 
     <h1>Hi, I'm Nicole.</h1>
-    <h2>I am passionate about creating new things.</h2>
+    <h2>I am passionate about doing & creating new things.</h2>
 
     <h3>Things about me</h3>
     <ul>
       
-      <li>I am a full-time SEO @ <a href="https://www.zazzle.com/" target="_blank">Zazzle</a> & a part-time <span class="lol-taught">self-taught</span> engineer.</li>
-      <li>I live in <span class="location">Ann Arbor, MI</span> San Jose, CA.</li>
-      <li>Occasionally, I take <a class="film" href="https://vsco.co/nickelfilm/gallery" target="_blank">film pictures</a> of my days.</li>
-      <li>Daily <em>writing</em> & <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
+      <li>I am a <span class="lol-taught">(soon-to-be)</a> full-time M.S. in Data Science student @ WGU & a part-time <span class="lol-taught">self-taught</span> iOS engineer for <a href="https://www.instagram.com/thefrndzapp">FRNDZ</a>.</li>
+      <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
+      <li>Occasionally making <a class="film" href="https://www.youtube.com/@nicoleagallo" target="_blank">mini movies</a> of my days.</li>
+      <li>Sometimes <em>writing</em> & <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
       <li>Follow what I'm doing on <a href="https://twitter.com/nickelscoin" target="_blank">Twitter</a> or <a href="https://www.instagram.com/nickelgallo/" target="_blank">Instagram</a>.</li>
     </ul>
 
     <h3>Proud things</h3>
     <ul>
+      <li>Bowling League Champion - ZogSports Fall 2017 - Team: Irritable Bowl Syndrome</li>
       <li>BYOR – Build Your Own Resume (HTML & CSS Project) | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/byor/" target="_blank">Deployed Site</a></li>
       <li>Code With Madi (HTML & CSS Project) | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
       <li>Burton D. Morgan Business Plan Competition - Semi Finalist | <a href="https://drive.google.com/file/d/1828SgranArgS0OV3EIBh26XvllTiZLof/view?usp=sharing" target="_blank">Exec Summary</a> | <a href="https://drive.google.com/file/d/16rbjCN_j6jpYr5JfnNw-0ou7rVrat6Yn/view?usp=sharing" target="_blank">Business
@@ -64,7 +65,7 @@
 
     <footer>
       <div class="credit">
-        <p>© Created by Nicole | 2023</p>
+        <p>© Created by Nicole | 2024</p>
 
       </div>
     </footer>
