--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h3>Things about me</h3>
     <ul>
       
-      <li>I am a <span class="lol-taught">(soon-to-be)</span> full-time M.S. in Data Science student @ WGU 
+      <li>I am a <i>(soon-to-be)</i> full-time M.S. in Data Science student @ WGU 
         <br>& a part-time <span class="lol-taught">self-taught</span> iOS engineer for <a href="https://www.instagram.com/thefrndzapp">FRNDZ</a>.</li>
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
       <li>Occasionally making <a class="film" href="https://www.youtube.com/@nicoleagallo" target="_blank">mini movies</a> of my days.</li>
@@ -54,7 +54,7 @@
     <div class="social">
 
       <a class="social-link" href="https://github.com/nicolegallo" target="_blank"><i class="fa-icon fa-brands fa-github fa-sm"></i>GitHub</a></li>
-      <br><a class="social-link" href="https://x.com/nickelscoin" target="_blank"><i class="fa-brands fa-x-twitter"></i>X</a></li>
+      <br><a class="social-link" href="https://x.com/nickelscoin" target="_blank"><i class="fa-icon fa-brands fa-x-twitter"></i>X (Twitter)</a></li>
       <br><a class="social-link" href="https://www.linkedin.com/in/nicolegallo/" target="_blank"><i class="fa-icon fa-brands fa-linkedin fa-sm"></i>LinkedIn</a></li>
       <br><a class="social-link" href="mailto:nicole.gallo@outlook.com?subject=Hello!"><i class="fa-icon fa-solid fa-at fa-sm"></i>Email</a></li>
       <br><a class="social-link" href="https://biglittlegains.com/" target="_blank"><i class="fa-icon fa-solid fa-at fa-sm fa-blog"></i>Blog</a></li> 
