--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <h3>Proud things</h3>
     <ul>
-      <li>Bowling League Champion - ZogSports Fall 2017 - Team: Irritable Bowl Syndrome</li>
+      <li>Bowling League Champion - ZogSports Fall 2017 - Team: <a href="https://www.leaguesecretary.com/bowling-centers/homestead-bowl-and-the-x-bar-cupertino-california/bowling-leagues/mixed-nuts-s24/bowler-info/nicole-gallo/2024/summer/126831/274">Irritable Bowl Syndrome</a></li>
       <li>BYOR – Build Your Own Resume (HTML & CSS Project) | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/byor/" target="_blank">Deployed Site</a></li>
       <li>Code With Madi (HTML & CSS Project) | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
       <li>Burton D. Morgan Business Plan Competition - Semi Finalist | <a href="https://drive.google.com/file/d/1828SgranArgS0OV3EIBh26XvllTiZLof/view?usp=sharing" target="_blank">Exec Summary</a> | <a href="https://drive.google.com/file/d/16rbjCN_j6jpYr5JfnNw-0ou7rVrat6Yn/view?usp=sharing" target="_blank">Business
