--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul>
       
       <li>I am a <i>(soon-to-be)</i> full-time M.S. in Data Science student @ WGU 
-        <br>& a part-time <span class="lol-taught">self-taught</span> iOS engineer for <a href="https://www.instagram.com/thefrndzapp">FRNDZ</a>.</li>
+        <br>& a part-time <span class="lol-taught">self-taught</span> iOS engineer for <a href="https://www.instagram.com/thefrndzapp" target="_blank">FRNDZ</a>.</li>
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
       <li>Occasionally making <a class="film" href="https://www.youtube.com/@nicoleagallo" target="_blank">mini movies</a> of my days.</li>
       <li>Sometimes <em>writing</em> & <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
@@ -42,7 +42,7 @@
 
     <h3>Proud things</h3>
     <ul>
-      <li>Bowling League Champion - ZogSports Fall 2017 - Team: <a href="https://www.leaguesecretary.com/bowling-centers/homestead-bowl-and-the-x-bar-cupertino-california/bowling-leagues/mixed-nuts-s24/bowler-info/nicole-gallo/2024/summer/126831/274">Irritable Bowl Syndrome</a></li>
+      <li>Bowling League Champion - ZogSports Fall 2017 - Team: <a href="https://www.leaguesecretary.com/bowling-centers/homestead-bowl-and-the-x-bar-cupertino-california/bowling-leagues/mixed-nuts-s24/bowler-info/nicole-gallo/2024/summer/126831/274" target="_blank">Irritable Bowl Syndrome</a></li>
       <li>BYOR – Build Your Own Resume (HTML & CSS Project) | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/byor/" target="_blank">Deployed Site</a></li>
       <li>Code With Madi (HTML & CSS Project) | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
       <li>Burton D. Morgan Business Plan Competition - Semi Finalist | <a href="https://drive.google.com/file/d/1828SgranArgS0OV3EIBh26XvllTiZLof/view?usp=sharing" target="_blank">Exec Summary</a> | <a href="https://drive.google.com/file/d/16rbjCN_j6jpYr5JfnNw-0ou7rVrat6Yn/view?usp=sharing" target="_blank">Business
