--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <h3>Things about me</h3>
     <ul>
       
-      <li>I am a full-time B.S. in Computer Science student @ WGU 
-        <br>& a part-time <span class="lol-taught">self-taught</span> iOS engineer for <a href="https://www.instagram.com/thefrndzapp" target="_blank">FRNDZ</a>.</li>
+      <li>Full-time B.S. in Computer Science student @ WGU 
+        <br>& part-time Founder & CEO of <a href="https://www.instagram.com/thefrndzapp" target="_blank">FRNDZ</a> - <b>Coming Soon!</b></li>
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
       <li>Occasionally making <a class="film" href="https://www.youtube.com/@nicoleagallo" target="_blank">mini movies</a> of my days.</li>
       <li>Sometimes <em>writing</em> & <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
