--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li>Full-time B.S. in Computer Science student @ WGU 
         <br>& part-time Founder & CEO of <a href="https://www.instagram.com/thefrndzapp" target="_blank">FRNDZ</a> - <b>Coming Soon!</b></li>
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
-      <li>Occasionally making <a class="film" href="https://www.youtube.com/@nicoleagallo" target="_blank">mini movies</a> of my days.</li>
+      <li>Occasionally making <a class="film" href="https://www.youtube.com/@nickelgallo" target="_blank">mini movies</a> of my days.</li>
       <li>Sometimes <em>writing</em> & always <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
       <li>Follow what I'm doing on <a href="https://x.com/nickelscoin" target="_blank">X</a> or <a href="https://www.instagram.com/nickelgallo/" target="_blank">Instagram</a>.</li>
     </ul>
