--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h3>Proud things</h3>
     <ul>
       <li>Bowling League Champion - <i>ZogSports Fall 2017</i> - Team: <a href="https://www.leaguesecretary.com/bowling-centers/homestead-bowl-and-the-x-bar/top-bowlers-by-season/5042/2024/u/w/1?page=2" target="_blank">Irritable Bowl Syndrome <em>(find my name)</em></a></li>
-      <li>BYOR – Build Your Own Resume (HTML & CSS Project) | <a href="https://github.com/nicolegallo/byor" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/byor/" target="_blank">Deployed Site</a></li>
+      <li><strong>NEW</strong>Tori Time Tracker 🌷 (HTML CSS JavaScript Project) | <a href="https://github.com/nicolegallo/tori-time-tracker" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/tori-time-tracker/" target="_blank">Deployed Site</a></li>
       <li>Code With Madi (HTML & CSS Project) | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
       <li>Burton D. Morgan Business Plan Competition - Semi Finalist | <a href="https://drive.google.com/file/d/1828SgranArgS0OV3EIBh26XvllTiZLof/view?usp=sharing" target="_blank">Exec Summary</a> | <a href="https://drive.google.com/file/d/16rbjCN_j6jpYr5JfnNw-0ou7rVrat6Yn/view?usp=sharing" target="_blank">Business
           Plan</a></li>
@@ -56,7 +56,7 @@
       <a class="social-link" href="https://github.com/nicolegallo" target="_blank"><i class="fa-icon fa-brands fa-github fa-sm"></i>GitHub</a></li>
       <br><a class="social-link" href="https://x.com/nickelscoin" target="_blank"><i class="fa-icon fa-brands fa-x-twitter"></i>X (Twitter)</a></li>
       <br><a class="social-link" href="https://www.linkedin.com/in/nicolegallo/" target="_blank"><i class="fa-icon fa-brands fa-linkedin fa-sm"></i>LinkedIn</a></li>
-      <br><a class="social-link" href="mailto:nicole.gallo@outlook.com?subject=Hello!"><i class="fa-icon fa-solid fa-at fa-sm"></i>Email</a></li>
+      <br><a class="social-link" href="mailto:nicoleagallo@gmail.com?subject=Hello!"><i class="fa-icon fa-solid fa-at fa-sm"></i>Email</a></li>
       <br><a class="social-link" href="https://biglittlegains.com/" target="_blank"><i class="fa-icon fa-solid fa-at fa-sm fa-blog"></i>Blog</a></li> 
     </div>
 
