--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
       <img class="photo2" src="badge-mustache.jpg" alt="NG alternate logo">
     </div>
 
-    <h1>Hi, I'm Nicole.</h1>
-    <h2>I am passionate about doing & creating new things.</h2>
+    <h1>Hi! I'm Nicole.</h1>
+    <h2>I am passionate about doing things & creating things.</h2>
 
-    <h3>Things about me</h3>
+    <h3>Good things about me</h3>
     <ul>
       
-      <li>Full-time B.S. in Computer Science student @ WGU 
-        <br>& part-time Founder & CEO of <a href="https://www.instagram.com/thefrndzapp" target="_blank">FRNDZ</a> - <b>Coming Soon!</b></li>
+      <li>Full-time B.S. in Software Engineering student @ WGU 
+        <br>& part-time Founder & CEO of <a href="https://www.instagram.com/thefrndzapp" target="_blank">FRNDZ</a> - <strong>Coming Soon!</strong></li>
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
       <li>Occasionally making <a class="film" href="https://www.youtube.com/@nickelgallo" target="_blank">mini movies</a> of my days.</li>
       <li>Sometimes <em>writing</em> & always <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
-      <li>Follow what I'm doing on <a href="https://x.com/nickelscoin" target="_blank">X</a> or <a href="https://www.instagram.com/nickelgallo/" target="_blank">Instagram</a>.</li>
+        <li>Recently quit my corporate job & currently doing a lot, but having fun. Follow what I'm doing on <a href="https://www.instagram.com/nickelgallo/" target="_blank">Instagram</a>.</li>
     </ul>
 
-    <h3>Proud things</h3>
+    <h3>Proud things about what I do</h3>
     <ul>
       <li>Bowling League Champion - <i>ZogSports Fall 2017</i> - Team: <a href="https://www.leaguesecretary.com/bowling-centers/homestead-bowl-and-the-x-bar/bowling-leagues/mixed-nuts-f2425/bowler/history/126831/2024/f/370" target="_blank">Irritable Bowl Syndrome <em>(find my name)</em></a></li>
       <li><strong>NEW</strong> Tori Time Tracker 🌷 (HTML CSS JavaScript Project) | <a href="https://github.com/nicolegallo/tori-time-tracker" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/tori-time-tracker/" target="_blank">Deployed Site</a></li>
@@ -50,7 +50,7 @@
       <li>Microsoft Hackathon - 1st Place | Ereo Application for Windows Phones | <a href="https://www.youtube.com/shorts/iQ_qpXKbZR0" target="_blank">Video Demo</a></li>
     </ul>
 
-    <h3>More things about me</h3>
+    <h3>Other things about where to find me</h3>
     <div class="social">
 
       <a class="social-link" href="https://github.com/nicolegallo" target="_blank"><i class="fa-icon fa-brands fa-github fa-sm"></i>GitHub</a></li>
