--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
       <li>Occasionally making <a class="film" href="https://www.youtube.com/@nickelgallo" target="_blank">mini movies</a> of my days.</li>
       <li>Sometimes <em>writing</em> & always <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
-        <li>Recently quit my corporate job & currently doing a lot, but having fun. Follow what I'm doing on <a href="https://www.instagram.com/nickelgallo/" target="_blank">Instagram</a>.</li>
+        <li>Recently quit my corporate job & currently doing a lot, but <a href="https://www.instagram.com/nickelgallo/" target="_blank">having fun</a>.</li>
     </ul>
 
     <h3>Proud things about what I do</h3>
