--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <li>Microsoft Hackathon - 1st Place | Ereo Application for Windows Phones | <a href="https://www.youtube.com/shorts/iQ_qpXKbZR0" target="_blank">Video Demo</a></li>
     </ul>
 
-    <h3>Other things about where to find me</h3>
+    <h3>Other fun things about me</h3>
     <div class="social">
 
       <a class="social-link" href="https://github.com/nicolegallo" target="_blank"><i class="fa-icon fa-brands fa-github fa-sm"></i>GitHub</a></li>
