--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
     </footer>
   </div>
-
+<a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=w1fccf35l3fecc9nzl2769xqgyfu1sta" border="0" title="free hit counter" alt="free hit counter"></a>
 </body>
 
 </html>
