--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h3>Proud things about what I do</h3>
     <ul>
       <li>Bowling League Champion - <i>ZogSports Fall 2017</i> - Team: <a href="https://www.leaguesecretary.com/bowling-centers/homestead-bowl-and-the-x-bar/bowling-leagues/mixed-nuts-f2425/bowler/history/126831/2024/f/370" target="_blank">Irritable Bowl Syndrome <em>(find my name)</em></a></li>
-      <li><strong>NEW</strong> Tori Time Tracker 🌷 (HTML CSS JavaScript Project) | <a href="https://github.com/nicolegallo/tori-time-tracker" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/tori-time-tracker/" target="_blank">Deployed Site</a></li>
+      <li><strong>NEW</strong> Tori Time Tracker 🌷 (HTML CSS JavaScript Project) | <a href="https://github.com/nicolegallo/tori-time-tracker" target="_blank">GitHub</a> | <a href="http://nictorian-era.infinityfreeapp.com/" target="_blank">Deployed Site</a></li>
       <li>Code With Madi (HTML CSS JavaScript Project) | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
       <li>Burton D. Morgan Business Plan Competition - Semi Finalist | <a href="https://drive.google.com/file/d/1828SgranArgS0OV3EIBh26XvllTiZLof/view?usp=sharing" target="_blank">Exec Summary</a> | <a href="https://drive.google.com/file/d/16rbjCN_j6jpYr5JfnNw-0ou7rVrat6Yn/view?usp=sharing" target="_blank">Business
           Plan</a></li>
