--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h3>Good things about me</h3>
     <ul>
       
-      <li>Full-time M.S. in Data Science @ WGU (<a href="https://drive.google.com/file/d/17BAPvXMa-FgMIzdlkFrp4n24wH9__cIE/view?usp=sharing">hire me????</a>
+      <li>Full-time M.S. in Data Science @ WGU (<a href="https://drive.google.com/file/d/17BAPvXMa-FgMIzdlkFrp4n24wH9__cIE/view?usp=sharing" target="_blank">hire me????)</a>
         <br>& part-time Founder & CEO of <a href="https://www.instagram.com/thefrndzapp" target="_blank">FRNDZ</a> - <strong>Coming Soon!</strong></li>
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
       <li>Occasionally making <a class="film" href="https://www.youtube.com/@nickelgallo" target="_blank">mini movies</a> of my days.</li>
@@ -43,7 +43,7 @@
     <h3>Proud things about what I do</h3>
     <ul>
       
-      <li><strong>NEW</strong> Tori Time Tracker 🌷 (HTML CSS JavaScript Project) | <a href="https://github.com/nicolegallo/tori-time-tracker" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/tori-time-tracker/" target="_blank">Deployed Site</a> <em><a href="https://nicolegallo.github.io/temp-tori-time-tracker/">(Temp Site)</a></em></li>
+      <li><strong>NEW</strong> Tori Time Tracker 🌷 (HTML CSS JavaScript Project) | <a href="https://github.com/nicolegallo/tori-time-tracker" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/tori-time-tracker/" target="_blank">Deployed Site</a> <em><a href="https://nicolegallo.github.io/temp-tori-time-tracker/" target="_blank">(Temp Site)</a></em></li>
       <li>Code With Madi (HTML CSS JavaScript Project) | <a href="https://github.com/nicolegallo/nickelnotnickle" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/nickelnotnickle/" target="_blank">Deployed Site</a></li>
       <li>Burton D. Morgan Business Plan Competition - Semi Finalist | <a href="https://drive.google.com/file/d/1828SgranArgS0OV3EIBh26XvllTiZLof/view?usp=sharing" target="_blank">Exec Summary</a> | <a href="https://drive.google.com/file/d/16rbjCN_j6jpYr5JfnNw-0ou7rVrat6Yn/view?usp=sharing" target="_blank">Business
           Plan</a></li>
