--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h3>Good things about me</h3>
     <ul>
       
-      <li>Full-time M.S. in Data Science @ WGU (<a href="https://drive.google.com/file/d/17BAPvXMa-FgMIzdlkFrp4n24wH9__cIE/view?usp=sharing" target="_blank">hire me????)</a>
+      <li>Full-time M.S. in Data Science @ WGU (<a href="https://drive.google.com/file/d/17BAPvXMa-FgMIzdlkFrp4n24wH9__cIE/view?usp=sharing" target="_blank">hire me????</a>)
         <br>& part-time Founder & CEO of <a href="https://www.instagram.com/thefrndzapp" target="_blank">FRNDZ</a> - <strong>Coming Soon!</strong></li>
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
       <li>Occasionally making <a class="film" href="https://www.youtube.com/@nickelgallo" target="_blank">mini movies</a> of my days.</li>
