--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br>& part-time Creator of <a href="https://nicolegallo.github.io/FRNDZ/" target="_blank">FRNDZ</a> - <strong>Launching Soon🚀</strong></li>
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
       <li>Occasionally making <a class="film" href="https://www.youtube.com/@nickelgallo" target="_blank">mini movies</a> of my days.</li>
-      <li>Sometimes <em>writing</em> & always <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
+      <li>Sometimes <em>writing</em>, but always <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
         <li>Recently quit my corporate job & currently doing a lot, but <a href="https://www.instagram.com/nickelgallo/" target="_blank">having fun</a>.</li>
     </ul>
 
