--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <a class="social-link" href="https://github.com/nicolegallo" target="_blank"><i class="fa-icon fa-brands fa-github fa-sm"></i>GitHub</a></li>
       <br><a class="social-link" href="https://x.com/nickelscoin" target="_blank"><i class="fa-icon fa-brands fa-x-twitter"></i>X (Twitter)</a></li>
       <br><a class="social-link" href="https://www.linkedin.com/in/nicolegallo/" target="_blank"><i class="fa-icon fa-brands fa-linkedin fa-sm"></i>LinkedIn</a></li>
-      <br><a class="social-link" href="https://www.goodreads.com/user/show/74403740-nicole-gallo" target="_blank"><i class="fa-icon fa-brands fa-solid fa-book-bookmark"></i>goodreads</a></li>
+      <br><a class="social-link" href="https://www.goodreads.com/user/show/74403740-nicole-gallo" target="_blank"><i class="fa-icon fa-brands fa-solid fa-book"></i>goodreads</a></li>
       <br><a class="social-link" href="mailto:nicoleagallo@gmail.com?subject=Hello!"><i class="fa-icon fa-solid fa-at fa-sm"></i>Email</a></li>
       <br><a class="social-link" href="https://biglittlegains.com/" target="_blank"><i class="fa-icon fa-solid fa-at fa-sm fa-blog"></i>Blog</a></li> 
     </div>
