--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>Hi! I'm Nicole.</h1>
     <h2>I am passionate about doing things & creating things.</h2>
 
-    <h3>Good things about me</h3>
+    <h3>Things about me</h3>
     <ul>
       
       <li>Full-time M.S. in Data Science @ WGU (<a href="https://drive.google.com/file/d/1nK2cuXyl-QtPvOna7S3BgiaV_4yt6XqA/view?usp=sharing" target="_blank">hire me????</a>)
@@ -40,7 +40,7 @@
         <li>Recently quit my corporate job & currently doing a lot, but <a href="https://www.instagram.com/nickelgallo/" target="_blank">having fun</a>.</li>
     </ul>
 
-    <h3>Proud things about what I do</h3>
+    <h3>Things I have done</h3>
     <ul>
       
       <li><strong>NEW</strong> Tori Time Tracker 🌷 (HTML CSS JavaScript Project) | <a href="https://github.com/nicolegallo/tori-time-tracker" target="_blank">GitHub</a> | <a href="https://nicolegallo.github.io/tori-time-tracker/" target="_blank">Deployed Site</a> <em><a href="https://nicolegallo.github.io/temp-tori-time-tracker/" target="_blank">(Temp Site)</a></em></li>
