--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <li>Bowling League Champion - <i>ZogSports Fall 2017</i> - Team: <a href="https://www.leaguesecretary.com/bowling-centers/homestead-bowl-and-the-x-bar/bowling-leagues/mixed-nuts-f2425/bowler/history/126831/2024/f/370" target="_blank">Irritable Bowl Syndrome <em>(find my name)</em></a></li>
     </ul>
 
-    <h3>Other fun things about me</h3>
+    <h3>Things that are fun</h3>
     <div class="social">
 
       <a class="social-link" href="https://github.com/nicolegallo" target="_blank"><i class="fa-icon fa-brands fa-github fa-sm"></i>GitHub</a></li>
