Update FRNDZ link to new URL

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul>
       
       <li>Full-time M.S. in Data Science @ WGU (<a href="https://drive.google.com/file/d/1nK2cuXyl-QtPvOna7S3BgiaV_4yt6XqA/view?usp=sharing" target="_blank">hire me????</a>)
-        <br>& part-time Creator of <a href="https://nicolegallo.github.io/FRNDZ/" target="_blank">FRNDZ</a> - <strong>Launching Soon🚀</strong></li>
+        <br>& part-time Creator of <a href="https://nicolegallo.github.io/FRNDZ-launch/" target="_blank">FRNDZ</a> - <strong>Launching Soon🚀</strong></li>
       <li>Living in <span class="location">San Jose, CA</span> Indianapolis, IN.</li>
       <li>Occasionally making <a class="film" href="https://www.youtube.com/@nickelgallo" target="_blank">mini movies</a> of my days.</li>
       <li>Sometimes <em>writing</em>, but always <strong>gaining</strong> @ <a href="https://biglittlegains.com/" target="_blank">Big Little Gains</a>.
